# ADS

./: .gitignore  meson.build
AdsAL/AdsClient/: AdsClient.hpp  TcAdsClient.hpp  TcAdsClientWrapper.cpp  TcAdsClientWrapper.hpp
AdsAL/AdsCommon/: AdsCommon.hpp
TestAdsLinux/: TestAdsLinux.sln
TestAdsLinux/TestAdsLinux/: TestAdsLinux.tsproj
TestAdsLinux/TestAdsLinux/Untitled1/: PlcTask.TcTTO  Untitled1.plcproj  Untitled1.tmc
TestAdsLinux/TestAdsLinux/Untitled1/DUTs/: ST_Aligned.TcDUT  ST_AlignedStructs.TcDUT  ST_Packed.TcDUT  U_AlignedStructs.TcDUT
TestAdsLinux/TestAdsLinux/Untitled1/POUs/: MAIN.TcPOU
TestAdsLinux/TestAdsLinux/_Config/PLC/: Untitled1.xti
example_AL/: example.cpp  meson.build
example_AL/subprojects/AdsLib/: include  meson.build
example_extended/: Makefile  example.cpp
